@@ -379,16 +379,14 @@ function typekit_support() {
 
 }
 add_action('wp_head', 'typekit_support');
-
-
-// Register jQuery
 	
 // Load jQuery
+function if_jquery() {
 	if ( !is_admin() ) {
-	   wp_deregister_script('jquery');
-	   wp_register_script('jquery', ("http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"), false);
 	   wp_enqueue_script('jquery');
 	}
+}
+add_action('wp_enqueue_scripts', 'if_jquery');
 	
 	// Register menu names
 	
