@@ -8,6 +8,8 @@ Version 3.0.4 (12-05-11)
 -Removed special charcters filter from Custom CSS option.
 -Added class to archive title H2 tags. 
 -Added link hover color option.
+-jQuery no-conflict fix.
+-Now calling WP jQuery library. 
 
 Version 3.0.3 (12-01-11)
 -Various IE visual fixes.
